--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
-// colors: hsla(33, 100%, 59%, 1), hsla(33, 95%, 69%, 1), white
+// colors: hsla(33, 100%, 59%, 1), hsla(33, 95%, 94%, 1), white
+
+$test-border: 2px solid red;
 
 *,
 ::before,
@@ -7,5 +9,23 @@
 }
 
 body {
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: 'Lato', Arial, sans-serif;
+  text-align: center;
+  margin: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: hsla(33, 95%, 94%, 1);
+  & > * {
+    padding-right: 0.6em;
+    padding-left: 0.6em;
+    font-size: 1.25em;
+  }
+}
+
+h1 {
+  font-size: 2.5em;
 }
