--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,19 @@ header {
   }
 }
 
+article {
+  padding: 0.5em;
+}
+
 h1 {
   font-size: 2.5em;
+}
+
+.description {
+  font-size: 1.25em;
+  width: 80vw;
+  background: hsla(33, 55%, 97%, 1);
+  padding: 1em;
+  border-radius: 10px;
+  margin: 0 auto;
 }
