--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -42,3 +42,42 @@ h1 {
   border-radius: 10px;
   margin: 0 auto;
 }
+
+.select-js-method {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1em;
+  margin: 2vw auto;
+  font-size: 1.25em;
+  p {
+    margin: 0;
+  }
+  & > * {
+    padding: 0.5em;
+  }
+}
+
+.button {
+  font-size: 1.25em;
+  padding: 0.35em;
+  border-radius: 3px;
+  margin: 0.25em;
+  &--bad {
+    background: hsla(0, 100%, 97%, 1);
+    border: 1px solid hsla(0, 100%, 80%, 1);
+    &:hover {
+      background: hsla(0, 65%, 53%, 1);
+      color: white;
+    }
+  }
+  &--better {
+    background: hsla(101, 100%, 97%, 1);
+    border: 1px solid hsla(101, 100%, 38%, 1);
+    &:hover {
+      background: hsla(104, 57%, 31%, 1);
+      color: white;
+    }
+  }
+}
