--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,7 +67,8 @@ h1 {
   &--bad {
     background: hsla(0, 100%, 97%, 1);
     border: 1px solid hsla(0, 100%, 80%, 1);
-    &:hover {
+    &:hover,
+    &:focus {
       background: hsla(0, 65%, 53%, 1);
       color: white;
     }
@@ -75,9 +76,15 @@ h1 {
   &--better {
     background: hsla(101, 100%, 97%, 1);
     border: 1px solid hsla(101, 100%, 38%, 1);
-    &:hover {
+    &:hover,
+    &:focus {
       background: hsla(104, 57%, 31%, 1);
       color: white;
     }
   }
+}
+
+.oc-line-map {
+  border: 15px solid hsla(33, 55%, 97%, 1);
+  border-radius: 5px;
 }
