--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -44,12 +44,13 @@ h1 {
 }
 
 .select-js-method {
+  width: 80vw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 1em;
-  margin: 2vw auto;
+  margin: 1vw auto;
   font-size: 1.25em;
   p {
     margin: 0;
@@ -57,6 +58,11 @@ h1 {
   & > * {
     padding: 0.5em;
   }
+}
+
+.initiate {
+  background: hsla(33, 55%, 97%, 1);
+  width: 80vw;
 }
 
 .button {
@@ -85,6 +91,22 @@ h1 {
 }
 
 .oc-line-map {
-  border: 15px solid hsla(33, 55%, 97%, 1);
+  border: 9px solid hsla(33, 55%, 97%, 1);
   border-radius: 5px;
+  max-width: 95vw;
+}
+
+.messages {
+  background: hsla(33, 55%, 97%, 1);
+  width: 90vw;
+  min-height: 25vh;
+  padding: 0.25em;
+  margin: 2vw auto;
+  font-size: 1.25em;
+}
+
+footer {
+  font-size: 0.8em;
+  color: rgb(150, 150, 150);
+  padding-bottom: 1.25em;
 }
