made buttons accessible

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -66,12 +66,11 @@ h1 {
   flex-direction: column;
 }
 
-.button {
-  font-size: 1.25rem;
-  padding: 0.75rem;
+.label {
+  padding: 0.5em 0.75em;
+  border: $test-border;
   border-radius: 3px;
-  margin: 0.25rem;
-  max-width: 75vw;
+  margin: 0.25em;
   &--bad {
     background: hsla(0, 100%, 97%, 1);
     border: 1px solid hsla(0, 100%, 80%, 1);
@@ -90,13 +89,39 @@ h1 {
       color: white;
     }
   }
-  &--start {
-    border: 1px solid rgb(120, 120, 120);
-    &:hover,
-    &:focus {
-      background: rgb(30, 30, 30);
+}
+
+// prettier-ignore
+input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  &:active + .label {
+    background: rgb(50,50,50);
+  }
+  &:checked + .label {
+    &--bad {
+      background: hsla(0, 65%, 53%, 1);
       color: white;
     }
+    &--better {
+      background: hsla(104, 57%, 31%, 1);
+      color: white;
+    }
+  }
+}
+// prettier-ignore-end
+
+.button--start {
+  font-size: 1.25rem;
+  padding: 0.75rem;
+  border: 1px solid rgb(120, 120, 120);
+  border-radius: 3px;
+  margin: 0.25rem;
+  max-width: 75vw;
+  &:hover,
+  &:focus {
+    background: rgb(30, 30, 30);
+    color: white;
   }
 }
 
