--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -148,6 +148,10 @@ input[type="radio"] {
   font-size: 1.25em;
 }
 
+.messages-inner p {
+  font-size: 1.1rem;
+}
+
 footer {
   font-size: 0.8em;
   padding-bottom: 1.25em;
