--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -152,6 +152,16 @@ input[type="radio"] {
   font-size: 1.1rem;
 }
 
+.button--restart {
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.unclickable {
+  display: none;
+}
+
 footer {
   font-size: 0.8em;
   padding-bottom: 1.25em;
