--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -111,18 +111,21 @@ input[type="radio"] {
 }
 // prettier-ignore-end
 
-.button--start {
-  font-size: 1.25rem;
-  padding: 0.75rem;
+.button {
   border: 1px solid rgb(120, 120, 120);
   border-radius: 3px;
-  margin: 0.25rem;
   max-width: 75vw;
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover:not([disabled]) {
     background: rgb(30, 30, 30);
     color: white;
   }
+}
+
+.button--start {
+  font-size: 1.25rem;
+  padding: 0.75rem;
+  margin: 0.25rem;
 }
 
 .initiate {
